app/assets/stylesheets/bootstrap-custom.css.scss
/* ... */
.notify-me-button {
  width: 100%;
}
// Cart review
.cart-header {
  color: $more-emphasized-text;
  margin: 0;
}
.standard-delivery-header {
  color: $more-emphasized-text;
  margin: 10px 0;
}
.review-table-header {
  color: $more-emphasized-text;
  font-weight: 500;
  margin-bottom: 0;
}
.remove-from-cart-text {
  color: $bright-blue;
  font-size: 12px;
}
.dropdown-toggle-user-change-quantity-inventory,
.dropdown-toggle-subscriber-change-quantity-inventory,
.dropdown-toggle-customer-change-quantity-inventory {
  margin: 0 0 0 7.5px;
  height: 28px;
  min-width: 41px;
  background: $action-background !important;
  color: $white !important;
  border: 0;
}
.review-cart-dropdown {
  margin: 5px 0 0 7.5px;
  height: 28px;
  min-width: 41px;
  background: $action-background !important;
  color: $white !important;
  border: 0;
  height: 40px;
}
#delivery-cost-message-holder {
  margin-top: 20px;
}
.cart-review-delivery-cost-message {
  background: $extra-light-blue-gray;
  border: 1px solid $action-background;
  border-radius: 6px;
  padding: 5px 10px;
  display: inline-block;
  margin: 0;
  h3 {
    color: $more-emphasized-text;
    letter-spacing: 0.3px;
    margin: 10px 0;
    line-height: 1.2;
    span {
      color: $action-background;
    }
  }
}
.delivery-cost-message {
  color: $normal-text;
  margin: 5px 0 0 0;
}
.cart-review-summary-subtotal {
  color: $more-emphasized-text;
  margin-right: 30px;
}
.review-cart-add-more-items-text {
  margin-right: 30px;
}
.cart-review-summary-subtotal-price {
  color: $black;
  font-weight: 500;
}
.checkout-summary-tile {
  margin: 0 0 ;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
  border-radius: 6px;
  overflow: hidden;
  background: #fff;
  width: 99%;
  position: relative;
}
.checkout-summary-proceed-button {
  width: 100%;
  margin-top: 10px;
}
.checkout-summary-info-text {
  color: $normal-text;
  margin: 5px 0;
}
.checkout-summary-info-text.total-text {
  color: $more-emphasized-text;
  margin: 10px 0 20px 0;
  font-weight: 500;
}
.no-account-address-message {
  color: $more-emphasized-text;
}
.twenty-one-plus-delivery-message {
  color: $action-background;
}
.choose-delivery-time-text {
  color: $more-emphasized-text;
}
.delivery-time-standard-option-tile,
.delivery-time-reserved-option-tile,
.delivery-time-member-option-tile {
  margin: 0 0 15px 0;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
  border-radius: 6px;
  overflow: hidden;
  background: #fff;
  position: relative;
  padding: 5px 0;
}
.delivery-time-standard-option-tile:hover,
.delivery-time-reserved-option-tile:hover,
.delivery-time-member-option-tile:hover {
  background: rgba(0,135,203, 0.25);
}
.delivery-time-standard-option-tile.chosen,
.delivery-time-reserved-option-tile.chosen,
.delivery-time-member-option-tile.chosen {
  background: rgba(0,135,203, 0.25);
}
.check-mark-holder {
  text-align: center;
  padding:5px;
  border-right: 1px solid $less-emphasized-text;
  i {
    color: $action-background;
    font-weight: 300;
  }
}
.address-name {
  color: $less-emphasized-text;
  span {
    color: $more-emphasized-text;
    font-weight: 500;
  }
}
.delivery-time-option-text {
  color: $more-emphasized-text;
}
.register-prompt-text {
  color: $normal-text;
}
.confirm-order-checkout {
  button {
    width: 100%;
    margin-top: 10px;
 }
}
.confirm-membership {
  text-align: center;
  button {
    width: 100%;
    margin: 15px 0 30px 0;
 }
}
.membership-thank-you-header {
  color: $more-emphasized-text;
  margin: 20px 0 30px 0;
}
.membership-thank-you-subheader {
  color: $more-emphasized-text;
  margin: 10px 0 30px 0;
  line-height: 1.25;
}
.extra-get-started-option-row {
  margin: 30px 0 20px 0;
  p {
    margin-bottom: 20px;
  }
}
.order-thank-you-header {
  color: $more-emphasized-text;
  margin: 60px 0 20px 0;
  line-height: 1.3;
}
.order-thank-you-subheader {
  color: $more-emphasized-text;
  margin: 30px 0;
}
.drink-tile-show-more {
  position: absolute;
  left: 0.55px; 
  bottom: -4.5px;
  i {
    color: $action-background;
    font-size: 22px;
  }
}
.drink-tile-show-less {
  position: absolute;
  left: 0.55px; 
  bottom: 60px;
  i {
    color: $action-background;
    font-size: 22px;
  }
}
.drink-info-universal-first-row {
  min-height: 146px;
}
.first-row-get-shopping {
  margin-top: 40px;
}
.start-shopping-text {
  color: $more-emphasized-text;
  margin:30px 0;
}
.start-shopping-button {
  width: 100%;
}
.cloud-descriptor-holder-universal, .cloud-descriptor-drink-page {
  height: 85px;
  width: 125px;
}
.cloud-descriptor-holder-rating {
   height: 65px;
}
.drink-info-drink-page-second-row {
  margin: 20px 0 0 0;
}
.drink-info-universal-second-row {
  padding: 0 10px;
}
.delivery-settings-header-row {
  background: $light-gray;
  border: 1px solid $medium-light-gray;
  padding: 5px 0;
}
.delivery-drinks-show-more, 
.delivery-drinks-show-less,
.delivery-settings-show-more,
.delivery-settings-show-less {
  float: left;
  margin: 5px 5px 0 0;
  i {
    color: $action-background;
  }
}
.drink-info-universal-show-more, .drink-info-universal-show-less, .drink-info-rating-show-more, .drink-info-rating-show-less {
  position: absolute;
  left: 0.55px; 
  top: 67px;
  i {
    color: $action-background;
    font-size: 20px;
  }
}
.delivered-on-date {
  margin: 5px 0 0 0;
  color: $more-emphasized-text;
}
/* ... */

